# copilot-python-weather-cli

./: .env.example  Copilot-Exercises.md  README.md  github_copilot_exercises.md  github_copilot_exercises_2.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: copilot-instructions.md
.github-copilot-exercises/other_ides/: github_copilot_exercises.md  github_copilot_exercises_2.md
.github-copilot-exercises/vscode/: github_copilot_exercises.md  github_copilot_exercises_2.md
.github/agents/: Implementer.agent.md  Lead Developer.agent.md
.github/chatmodes/: Implementer_old.chatmode.md  Lead Developer_old.chatmode.md
.github/prompts/: ask_advice.prompt.md  create-plan.prompt.md  create-research-document.prompt.md  implement.prompt.md  lead-plan.prompt.md  report_to_lead.prompt.md
.github/workflows/: ci.yml
configs/: secrets.json
docs/: OpenWeatherAPI.md  api_documentation.md
src/weather_cli/: __init__.py  config_util.py  exceptions.py  main.py  weather_client.py  weather_data.py  weather_service.py
tests/: TESTING.md  test_config_util.py  test_main.py  test_weather_client.py  test_weather_data.py  test_weather_service.py
